syntax = "proto3";

package lightning.wire.lightningMessages.generated;

import "lightning/wire/types.proto";
import "lightning/wire/signature.proto";

message ClosingSigned {
  uint32 type = 1 [(bits) = 16];
  string channel_id = 2 [(hex) = true, (length) = 32];
  uint64 fee_satoshis = 3;
  lightning.wire.Signature signature = 4;
}
